depuraciones hasta vacantes
